Included Camp API

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CodeCamp": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PSCodeCamp;Integrated Security=True;Connect Timeout=30;"
+    "CodeCamp": "Server=database.mssql;Database=PSCodeCamp;User=sa;Password=Sec#rePassW0rD"
+
   }
 }
